--- a/accountmanagement/pom.xml
+++ b/accountmanagement/pom.xml
@@ -55,7 +55,17 @@
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
